Make the synopsis a fixed length
Also makes it so the overflow behavoir is always scrollbar because when
you hover off the old way the synopsis would snap back to original,
non-scrolled state.

--- a/velvet/velvet.css
+++ b/velvet/velvet.css
@@ -162,12 +162,11 @@ pre, code, kbd, samp, tt, .src {
 #synopsis .show {
   background: #e8e8e8;
   height: 500px;
-  overflow: none;
+  width: 500px;
+  overflow: scroll;
   padding: 1.5em;
   border: 1px solid #303030;
 }
-
-#synopsis .show:hover { overflow: auto; }
 
 #synopsis p.caption.collapser {
   background: url(synopsis.png) no-repeat -55px -17px;
